--- a/contact.html
+++ b/contact.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <link rel="icon" type="image/ico" href="img/favicon.ico">
   <link rel="stylesheet" href="css/stylesheet.css">
   <meta charset="utf-8">
   <title>R.A.P - Contact Us</title>
