--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="icon" type="image/ico" href="img/favicon.ico">
+    <link rel="icon" type="image/ico" href="img/rapicon.ico">
     <link rel="stylesheet" href="css/stylesheet.css">
     <meta charset="utf-8">
     <title>Rhythm and Poetry Club - Home</title>
