--- a/contact.html
+++ b/contact.html
@@ -17,22 +17,54 @@
       <a href="about.html">About Us</a>
       <a href="contact.html" style="background-color:#393939;">Contact Us</a>
       <div class="dropdown">
-        <button class="dropbtn">Topics</button>
+        <a href="topics.html"><button class="dropbtn">Topics</button></a>
         <div class="dropdown-content">
-          <a href="#">Current</a>
-          <a href="#">Suggest</a>
+          <a href="topics/current.html">Current</a>
+          <a href="topics/suggest.html">Suggest</a>
         </div>
       </div>
     </nav>
   </header>
 
   <main>
-    hey
-  </main>
 
-  <footer>
-    hey
-  </footer>
+    <hr>
+    <h1 style="padding:0;margin-top:-2%;">Contact Us</h1>
+    <h2 style="margin-top:-7%;text-align:center;">If you have any questions, feel free to send us an email</h2>
+
+    <article>
+      <h4 style="text-align:left;margin-bottom:1%;">Sanghyuk Park - Founder</h4>
+      <img src="img/sanghyuk.jpeg" alt="" style="float:left;">
+      <ul style="font-size:180%; margin-left:10%;">
+        <li>Email - 39687@jisedu.or.id</li>
+        <li>Favourite song - Street Lights by Kanye West</li>
+      </ul>
+    </article>
+<br><br>
+    <article>
+      <h4 style="text-align:left;margin-bottom:1%;">Nick Sugiarto - Founder</h4>
+      <img src="img/nick.jpeg" alt="" style="float:left;">
+      <ul style="font-size:180%; margin-left:10%;">
+        <li>Email - 44662@jisedu.or.id</li>
+        <li>Favourite song - C.R.E.A.M. by Wu-Tang Clan</li>
+      </ul>
+    </article>
+<br><br>
+    <article>
+      <h4 style="text-align:left;margin-bottom:1%;">Mr. Yuichiro Hara - Advisor</h4>
+      <img src="img/mrhara.jpeg" alt="" style="float:left;">
+      <ul style="font-size:180%;margin-left:10%;">
+        <li>Email - yhara@jisedu.or.id</li>
+        <li>Favourite song - Unknown</li>
+      </ul>
+    </article>
+    <br><br>
+<hr>
+    <footer style="text-align:center;background-color:black;padding-top:2%;padding-bottom:2%;">
+      <!--Copyright (c) 2016 Jakarta Intercultural School All Rights Reserved.-->
+      Website created by Xavier Travers.
+    </footer>
+  </main>
 
 </body>
 </html>
