--- a/topics.html
+++ b/topics.html
@@ -4,7 +4,7 @@
   <link rel="icon" type="image/ico" href="img/rapicon.ico">
   <link rel="stylesheet" href="css/stylesheet.css">
   <meta charset="utf-8">
-  <title>R.A.P - About Us</title>
+  <title>R.A.P - Contact Us</title>
 </head>
 <body>
   <header>
@@ -14,9 +14,9 @@
     <br>
     <nav style="text-align:left; font-size:90%;">
       <a href="index.html">Home</a>
-      <a href="about.html" style="background-color:#393939;">About Us</a>
+      <a href="about.html">About Us</a>
       <a href="contact.html">Contact Us</a>
-      <div class="dropdown">
+      <div class="dropdown" style="background-color:#393939;">
         <a href="topics.html"><button class="dropbtn">Topics</button></a>
         <div class="dropdown-content">
           <a href="topics/current.html">Current</a>
@@ -27,19 +27,15 @@
   </header>
 
   <main>
-    <hr>
-    <h1 style="padding:0;margin-top:-2%;">Why?</h1>
-    <h4 style="margin-top:-7%;">"Why? Cuz, why not?"</h4>
-    <img src="img/nicksang.jpeg" style="width:50%;margin-left:25%;padding:0;">
-    <h5 style="margin-top:0%;">Nick and Sanghyuk</h5>
-    <hr style="margin-top:-1%;">
-    <h2 style="font-size:200%;">No really, why?</h2>
-    <p>We believed that in addition to rap being something to enjoy, Sang Hyuk and I thought that there was something more to it. The two of us bonded over J. Cole and Kendrick Lamar, and the raw lyricism they brought into the rap game. After ping ponging ideas off each other, we both realised that there are others out there with whom we could share and develop our ideas. Thus, Rhythm and Poetry was born. </p>
 
-<br>
-<h1>JOIN US!</h1>
-    <br>
-    <br>
+    <hr>
+    <h1 style="padding:0;margin-top:-2%;">Topics</h1>
+    <h2 style="margin-top:-7%;text-align:center;">Suggest Topics or Check Out our Current Topics</h2>
+
+    <a href="topics/current.html" style="padding:1%;display:block;width:98%;background-color:black; color:#F8C928; text-decoration:none;"><h4>Current Topics</h3></a>
+<hr>
+    <a href="topics/suggest.html" style="padding:1%;display:block;width:98%;background-color:black; color:#F8C928; text-decoration:none;"><h4>Suggest Topics</h3></a>
+
 <hr>
     <footer style="text-align:center;background-color:black;padding-top:2%;padding-bottom:2%;">
       <!--Copyright (c) 2016 Jakarta Intercultural School All Rights Reserved.-->
