--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta charset="utf-8">
     <title>Rhythm and Poetry Club - Home</title>
   </head>
+
+
   <body>
     <header>
       <br>
@@ -16,22 +18,20 @@
         <a href="about.html">About Us</a>
         <a href="contact.html">Contact Us</a>
         <div class="dropdown">
-          <button class="dropbtn">Topics</button>
-          <div class="dropdown-content" style="margin-top:-9%;margin-left:-1.8%;">
+          <a href="topics.html"><button class="dropbtn">Topics</button></a>
+          <div class="dropdown-content" style="margin-top:-9%;margin-left:-1.8%;position:fixed;">
             <a href="#">Current</a>
             <a href="#">Suggest</a>
           </div>
         </div>
       </nav>
     </header>
-
     <main>
-      hey
-    </main>
-
-    <footer>
-      Copyright (c) 2016 Jakarta Intercultural School Students All Rights Reserved.
+    <footer style="margin-top:51%;text-align:right;width:98%;margin-left:13%;">
+      <!--Copyright (c) 2016 Jakarta Intercultural School All Rights Reserved.-->
+      Website created by Xavier Travers.
     </footer>
+    </main>
 
   </body>
 </html>
