First Release Update.
added song list with spotify and lyric links google doc.
Added signup sheet.
Final touches. Ready for use.

--- a/contact.html
+++ b/contact.html
@@ -23,6 +23,7 @@
           <a href="topics/suggest.html">Suggest</a>
         </div>
       </div>
+      <a href="songs.html">Songs</a>
     </nav>
   </header>
 
