--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
             <a href="#">Suggest</a>
           </div>
         </div>
+        <a href="songs.html">Songs</a>
+        <a href="signup.html">Sign Up!</a>
       </nav>
     </header>
     <main>
