--- a/signup.html
+++ b/signup.html
@@ -4,7 +4,7 @@
   <link rel="icon" type="image/ico" href="img/rapicon.ico">
   <link rel="stylesheet" href="css/stylesheet.css">
   <meta charset="utf-8">
-  <title>R.A.P - About Us</title>
+  <title>R.A.P - Sign Up!</title>
 </head>
 <body>
   <header>
@@ -14,7 +14,7 @@
     <br>
     <nav style="text-align:left; font-size:90%;">
       <a href="index.html">Home</a>
-      <a href="about.html" style="background-color:#393939;">About Us</a>
+      <a href="about.html">About Us</a>
       <a href="contact.html">Contact Us</a>
       <div class="dropdown">
         <a href="topics.html"><button class="dropbtn">Topics</button></a>
@@ -24,25 +24,20 @@
         </div>
       </div>
       <a href="songs.html">Songs</a>
-      <a href="signup.html">Sign Up!</a>
+      <a href="signup.html" style="background-color:#393939;">Sign Up!</a>
     </nav>
   </header>
 
   <main>
     <hr>
-    <h1 style="padding:0;margin-top:-2%;">Why?</h1>
-    <h4 style="margin-top:-7%;">"Why? Cuz, why not?"</h4>
-    <img src="img/nicksang.jpeg" style="width:50%;margin-left:25%;padding:0;">
-    <h5 style="margin-top:0%;">Nick and Sanghyuk</h5>
-    <hr style="margin-top:-1%;">
-    <h2 style="font-size:200%;">No really, why?</h2>
-    <p>We believed that in addition to rap being something to enjoy, Sang Hyuk and I thought that there was something more to it. The two of us bonded over J. Cole and Kendrick Lamar, and the raw lyricism they brought into the rap game. After ping ponging ideas off each other, we both realised that there are others out there with whom we could share and develop our ideas. Thus, Rhythm and Poetry was born. </p>
+    <h1 style="padding:0;margin-top:-2%;">Sign Up!</h1>
+    <h4 style="margin-top:-7%;">"Join for a happy society"</h4>
 
-<br>
-<h1>JOIN US!</h1>
+    <iframe src="https://docs.google.com/a/jisedu.or.id/forms/d/e/1FAIpQLSd2FAg0qTuosD3YaL3HinKCSfsUKzxwNYbIVgXm4yAeFgi8Dw/viewform?embedded=true" width="100%" height="192%" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
+
     <br>
     <br>
-<hr>
+  <hr>
     <footer style="text-align:center;background-color:black;padding-top:2%;padding-bottom:2%;">
       <!--Copyright (c) 2016 Jakarta Intercultural School All Rights Reserved.-->
       Website created by Xavier Travers.
