--- a/topics.html
+++ b/topics.html
@@ -4,7 +4,7 @@
   <link rel="icon" type="image/ico" href="img/rapicon.ico">
   <link rel="stylesheet" href="css/stylesheet.css">
   <meta charset="utf-8">
-  <title>R.A.P - Contact Us</title>
+  <title>R.A.P - Topics</title>
 </head>
 <body>
   <header>
@@ -23,6 +23,8 @@
           <a href="topics/suggest.html">Suggest</a>
         </div>
       </div>
+      <a href="songs.html">Songs</a>
+      <a href="signup.html">Sign Up!</a>
     </nav>
   </header>
 
