--- a/topics/current.html
+++ b/topics/current.html
@@ -23,6 +23,8 @@
           <a href="suggest.html">Suggest</a>
         </div>
       </div>
+      <a href="../songs.html">Songs</a>
+      <a href="../signup.html">Sign Up!</a>
     </nav>
   </header>
 
