--- a/topics/suggest.html
+++ b/topics/suggest.html
@@ -23,6 +23,8 @@
           <a style="background-color:#777070;" href="suggest.html">Suggest</a>
         </div>
       </div>
+      <a href="../songs.html">Songs</a>
+      <a href="../signup.html">Sign Up!</a>
     </nav>
   </header>
 
