fixed home page topic links not working

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
         <div class="dropdown">
           <a href="topics.html"><button class="dropbtn">Topics</button></a>
           <div class="dropdown-content" style="margin-top:-9%;margin-left:-1.8%;position:fixed;">
-            <a href="#">Current</a>
-            <a href="#">Suggest</a>
+            <a href="topics/current.html">Current</a>
+            <a href="topics/suggest.html">Suggest</a>
           </div>
         </div>
         <a href="songs.html">Songs</a>
