added info paragraphs
copied from  weebly site.

--- a/about.html
+++ b/about.html
@@ -37,9 +37,21 @@
     <hr style="margin-top:-1%;">
     <h2 style="font-size:200%;">No really, why?</h2>
     <p>We believed that in addition to rap being something to enjoy, Sang Hyuk and I thought that there was something more to it. The two of us bonded over J. Cole and Kendrick Lamar, and the raw lyricism they brought into the rap game. After ping ponging ideas off each other, we both realised that there are others out there with whom we could share and develop our ideas. Thus, Rhythm and Poetry was born. </p>
-
+<hr>
+<h2 style="font-size:200%;">Our Goals</h2>
+<p>We believe that outside of being entertaining there's a greater meaning behind Hip-Hop. Our club focuses on critically analyzing rap, looking for common themes such as biracial identity, segregation and the power of wealth in modern-day society. We'll also be looking at figures such as Kanye West, and discuss <i>why</i> they are so influential and what is it about them that appeals to people. </p>
+<hr>
+<h2 style="font-size:200%;">Publications</h2>
+<p>Our goal is to spread our word out there, either through a publication of our own or through the school magazine. We have wonderful illustrators who have agreed to add their drawings to supplement our analyses. </p>
+<hr>
+<h2 style="font-size:200%;">A Lasting Journey</h2>
+<p>We hope to run this club until we leave high school and we hope you will be in this club until you leave high school too.</p>
+<hr>
+<h2 style="font-size:200%;">Rappers We Love</h2>
+<img src="img/raplist.jpg" alt="" style="width:100%;">
+<hr>
 <br>
-<h1>JOIN US!</h1>
+<a href="signup.html" style="color:white;text-decoration:none;"><h1>JOIN US!</h1></a>
     <br>
     <br>
 <hr>
