Work Page Added
Added work page to nav bar
Fixed Missing links in contact page nav bar
adjusted for nav bar size.

--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
 <body>
   <header>
     <br>
-    <img src="img/RAP_blackback.png" style="width:12%; float:left; margin-left:10%;">
+    <img src="img/RAP_blackback.png" style="width:12%; float:left; margin-left:8.5%;">
     <!--<h1>Rhythm and Poetry</h1>-->
     <br>
     <nav style="text-align:left; font-size:90%;">
@@ -24,6 +24,8 @@
         </div>
       </div>
       <a href="songs.html">Songs</a>
+      <a href="work.html">Work</a>
+      <a href="signup.html">Sign Up!</a>
     </nav>
   </header>
 
