--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <br>
       <img src="img/RAP_blackback.png" style="width:55%;margin-left:5%;">
       <h3 style="margin-top:-2%; padding-bottom:4%">"What did that Rapper mean by this?"</h3>
-      <nav style="font-size:120%; margin-left:10%;">
+      <nav style="font-size:120%; margin-left:8%;">
         <a href="index.html" style="background-color:#393939;">Home</a>
         <a href="about.html">About Us</a>
         <a href="contact.html">Contact Us</a>
@@ -25,6 +25,7 @@
           </div>
         </div>
         <a href="songs.html">Songs</a>
+        <a href="work.html">Work</a>
         <a href="signup.html">Sign Up!</a>
       </nav>
     </header>
