--- a/work.html
+++ b/work.html
@@ -4,12 +4,12 @@
   <link rel="icon" type="image/ico" href="img/rapicon.ico">
   <link rel="stylesheet" href="css/stylesheet.css">
   <meta charset="utf-8">
-  <title>R.A.P - Songs and Lyrics</title>
+  <title>R.A.P - Our Work</title>
 </head>
 <body>
   <header>
     <br>
-    <img src="img/RAP_blackback.png" style="width:12%; float:left; margin-left:8.5%;">
+    <img src="img/RAP_blackback.png" style="width:12%; float:left; margin-left:8%;">
     <!--<h1>Rhythm and Poetry</h1>-->
     <br>
     <nav style="text-align:left; font-size:90%;">
@@ -23,20 +23,21 @@
           <a href="topics/suggest.html">Suggest</a>
         </div>
       </div>
-      <a href="songs.html" style="background-color:#393939;">Songs</a>
-      <a href="work.html">Work</a>
+      <a href="songs.html">Songs</a>
+      <a href="work.html" style="background-color:#393939;">Work</a>
       <a href="signup.html">Sign Up!</a>
     </nav>
   </header>
 
   <main>
     <hr>
-    <h1 style="padding:0;margin-top:-2%;">Songs List</h1>
-    <h4 style="margin-top:-7%;">The Songs we Analyse and their Lyrics</h4>
-    <iframe src="https://embed.spotify.com/?uri=spotify%3Auser%3Athemangoegg%3Aplaylist%3A489Bq91DPxXWS27knBfbK8" width="300" height="380" frameborder="0" allowtransparency="true" style="display:inline;"></iframe>
-    <div type="float:right;">
-      <!--<iframe target="_blank" src="https://docs.google.com/document/d/1ajJuyr25Hse8FdT1IzO8GPKpFXfreZYYUBHDwL3pVq0/pub?embedded=true" width="80%" height="380" frameborder="0" style="float:right;display:inline;margin-top:-35%;"></iframe></div>
--->
+    <h1 style="padding:0;margin-top:-2%;">Our Work</h1>
+    <h4 style="margin-top:-7%;">What have we done so far?</h4>
+
+    <iframe src="https://drive.google.com/embeddedfolderview?id=0B1s27A4EroflRGVTbFgtSW5EZlU#grid" style="width:100%; height:600px; border:0;"></iframe>
+
+
+    <!--
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 
       <iframe srcdoc="" frameborder="0" width="70%" height="420" frameborder="0" style="float:right;display:inline;margin-top:-35%;"></iframe>
@@ -54,7 +55,7 @@
                   }, 1000); // Actually not sure if timeout is required here...
               });
           });
-      </script>
+      </script> -->
 
     <br>
     <br>
