--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <header>
       <br>
-      <img src="img/RAP_blackback.png" style="width:55%;margin-left:5%;">
+      <img src="img/WT_RAP.png" style="width:73%;margin-left:5%;">
       <h3 style="margin-top:-2%; padding-bottom:4%">"What did that Rapper mean by this?"</h3>
       <nav style="font-size:120%; margin-left:8%;">
         <a href="index.html" style="background-color:#393939;">Home</a>
