--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
 <body>
   <header>
     <br>
-    <img src="img/RAP_blackback.png" style="width:12%; float:left; margin-left:8.5%;">
+    <img src="img/WT_RAP.png" style="width:12%; float:left; margin-left:8.5%;">
     <!--<h1>Rhythm and Poetry</h1>-->
     <br>
     <nav style="text-align:left; font-size:90%;">
