--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Mono" rel="stylesheet">
     <link rel="icon" type="image/ico" href="img/rapicon.ico">
     <link rel="stylesheet" href="css/stylesheet.css">
     <meta charset="utf-8">
@@ -13,8 +14,8 @@
       <br>
       <img src="img/WT_RAP.png" style="width:73%;margin-left:5%;">
       <h3 style="margin-top:-2%; padding-bottom:4%">"What did that Rapper mean by this?"</h3>
-      <nav style="font-size:120%; margin-left:8%;">
-        <a href="index.html" style="background-color:#393939;">Home</a>
+      <nav style="font-size:115%; margin-left:8%;margin-top:-2%;">
+        <a href="index.html" style="background-color:#393939;padding-bottom:1.4%;">Home</a>
         <a href="about.html">About Us</a>
         <a href="contact.html">Contact Us</a>
         <div class="dropdown">
@@ -30,7 +31,7 @@
       </nav>
     </header>
     <main>
-    <footer style="margin-top:51%;text-align:right;width:98%;margin-left:13%;">
+    <footer style="margin-top:50%;text-align:right;width:98%;margin-left:13%;">
       <!--Copyright (c) 2016 Jakarta Intercultural School All Rights Reserved.-->
       Website created by Xavier Travers.
     </footer>
