--- a/signup.html
+++ b/signup.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <link href="https://fonts.googleapis.com/css?family=Roboto+Mono" rel="stylesheet">
   <link rel="icon" type="image/ico" href="img/rapicon.ico">
   <link rel="stylesheet" href="css/stylesheet.css">
   <meta charset="utf-8">
@@ -12,7 +13,7 @@
     <img src="img/WT_RAP.png" style="width:12%; float:left; margin-left:8.5%;">
     <!--<h1>Rhythm and Poetry</h1>-->
     <br>
-    <nav style="text-align:left; font-size:90%;">
+    <nav style="text-align:left;font-size:87%;">
       <a href="index.html">Home</a>
       <a href="about.html">About Us</a>
       <a href="contact.html">Contact Us</a>
