Updated Link to Google Presentation 1
Changed link to new google pres with updated topics lists.

--- a/topics/current.html
+++ b/topics/current.html
@@ -35,7 +35,7 @@
     <h1 style="padding:0;margin-top:-2%;">Current Topics!</h1>
     <h4 style="margin-top:-7%;">What we're already discussing.</h4>
 
-    <iframe src="https://docs.google.com/presentation/d/1UfTcEs1B7fXy0B1BK5BL9K6Nvzgg5sObjdmp--bWIEE/embed?start=false&loop=true&delayms=30000" frameborder="0" width="100%" height="111%" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true" frameborder="0"></iframe>
+    <iframe src="https://docs.google.com/presentation/d/1SCvchDqFkQWgWRET2c4YWurxgk-86nRIq-_fUuAaX7c/embed?start=false&loop=false&delayms=60000" frameborder="0" width="100%" height="111%" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true" frameborder="0"></iframe>
 
     <br>
     <br>
