--- a/songs.html
+++ b/songs.html
@@ -36,15 +36,15 @@
     <h4 style="margin-top:-7%;">The Songs we Analyse and their Lyrics</h4>
     <iframe src="https://embed.spotify.com/?uri=spotify%3Auser%3Athemangoegg%3Aplaylist%3A489Bq91DPxXWS27knBfbK8" width="300" height="380" frameborder="0" allowtransparency="true" style="display:inline;"></iframe>
     <div type="float:right;">
-      <!--<iframe target="_blank" src="https://docs.google.com/document/d/1ajJuyr25Hse8FdT1IzO8GPKpFXfreZYYUBHDwL3pVq0/pub?embedded=true" width="80%" height="380" frameborder="0" style="float:right;display:inline;margin-top:-35%;"></iframe></div>
--->
-      <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+    <iframe target="_blank" src="https://docs.google.com/document/d/e/2PACX-1vRchBSUce-pj-QTUKaTfyBOK_cUeDjcwZWmzHtt0yad93PxSGEeCyPLDR8U93oM5KypKd9cLbrFX6RG/pub?embedded=true" width="76%" height="384" frameborder="0" style="float:right;display:inline;margin-top:-30%;"></iframe></div>
+
+      <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 
       <iframe srcdoc="" frameborder="0" width="70%" height="420" frameborder="0" style="float:right;display:inline;margin-top:-35%;"></iframe>
 
-      <script>
+        <script>
           $(function() {
-              $.get("https://docs.google.com/document/d/1aWdzWnp_EkL6f-n2A5wdjEXZtocokvdUPl5pa9SkVS4/pub?embedded=true", function(html) {
+              $.get("https://docs.google.com/document/d/e/2PACX-1vRchBSUce-pj-QTUKaTfyBOK_cUeDjcwZWmzHtt0yad93PxSGEeCyPLDR8U93oM5KypKd9cLbrFX6RG/pub?embedded=true", function(html) {
                   var contents = $("iframe").contents();
 
                   contents.find("html").html(html);
@@ -55,13 +55,13 @@
                   }, 1000); // Actually not sure if timeout is required here...
               });
           });
-      </script>
+      </script> -->
 
     <br>
     <br>
 <hr>
     <footer style="text-align:center;background-color:black;padding-top:2%;padding-bottom:2%;">
-      <!--Copyright (c) 2016 Jakarta Intercultural School All Rights Reserved.-->
+      <!--Copyright (c) 2017 Jakarta Intercultural School All Rights Reserved.-->
       Website created by Xavier Travers.
     </footer>
   </main>
