Redoing the code fixed the aforementioned issue

--- a/songs.html
+++ b/songs.html
@@ -38,24 +38,24 @@
     <div type="float:right;">
     <iframe target="_blank" src="https://docs.google.com/document/d/e/2PACX-1vRchBSUce-pj-QTUKaTfyBOK_cUeDjcwZWmzHtt0yad93PxSGEeCyPLDR8U93oM5KypKd9cLbrFX6RG/pub?embedded=true" width="76%" height="384" frameborder="0" style="float:right;display:inline;margin-top:-30%;"></iframe></div>
 
-      <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 
       <iframe srcdoc="" frameborder="0" width="70%" height="420" frameborder="0" style="float:right;display:inline;margin-top:-35%;"></iframe>
 
         <script>
           $(function() {
               $.get("https://docs.google.com/document/d/e/2PACX-1vRchBSUce-pj-QTUKaTfyBOK_cUeDjcwZWmzHtt0yad93PxSGEeCyPLDR8U93oM5KypKd9cLbrFX6RG/pub?embedded=true", function(html) {
-                  var contents = $("iframe").contents();
+                var contents = $("iframe").contents();
 
-                  contents.find("html").html(html);
+           contents.find("html").html(html);
 
-                  setTimeout(function() {
-                      contents.find('a[href^="http://"]').attr("target", "_blank");
-                      contents.find('a[href^="https://"]').attr("target", "_blank");
-                  }, 1000); // Actually not sure if timeout is required here...
-              });
-          });
-      </script> -->
+           setTimeout(function() {
+               contents.find('a[href^="http://"]').attr("target", "_blank");
+               contents.find('a[href^="https://"]').attr("target", "_blank");
+           }, 1000); // Actually not sure if timeout is required here...
+       });
+   });
+</script>
 
     <br>
     <br>
