Fixed Song List

--- a/songs.html
+++ b/songs.html
@@ -34,9 +34,10 @@
     <hr>
     <h1 style="padding:0;margin-top:-2%;">Songs List</h1>
     <h4 style="margin-top:-7%;">The Songs we Analyse and their Lyrics</h4>
-    <iframe src="https://embed.spotify.com/?uri=spotify%3Auser%3Athemangoegg%3Aplaylist%3A489Bq91DPxXWS27knBfbK8" width="300" height="380" frameborder="0" allowtransparency="true" style="display:inline;"></iframe>
+    <div style="">
+    <iframe src="https://embed.spotify.com/?uri=spotify%3Auser%3Athemangoegg%3Aplaylist%3A489Bq91DPxXWS27knBfbK8" width="350" height="380" frameborder="0" allowtransparency="true" style="display:inline;"></iframe>
     <div type="float:right;">
-    <iframe target="_blank" src="https://docs.google.com/document/d/e/2PACX-1vRchBSUce-pj-QTUKaTfyBOK_cUeDjcwZWmzHtt0yad93PxSGEeCyPLDR8U93oM5KypKd9cLbrFX6RG/pub?embedded=true" width="76%" height="384" frameborder="0" style="float:right;display:inline;margin-top:-30%;"></iframe></div>
+    <iframe target="_blank" src="https://docs.google.com/document/d/e/2PACX-1vRchBSUce-pj-QTUKaTfyBOK_cUeDjcwZWmzHtt0yad93PxSGEeCyPLDR8U93oM5KypKd9cLbrFX6RG/pub?embedded=true" width="74%" height="344" frameborder="0" style="float:right;display:inline;margin-top:-25%;z-index:-2;"></iframe></div>
 
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 
@@ -56,7 +57,7 @@
        });
    });
 </script>
-
+</div>
     <br>
     <br>
 <hr>
