--- a/songs.html
+++ b/songs.html
@@ -37,9 +37,11 @@
     <div style="">
     <iframe src="https://embed.spotify.com/?uri=spotify%3Auser%3Athemangoegg%3Aplaylist%3A489Bq91DPxXWS27knBfbK8" width="350" height="380" frameborder="0" allowtransparency="true" style="display:inline;"></iframe>
     <div type="float:right;">
-    <iframe target="_blank" src="https://docs.google.com/document/d/e/2PACX-1vRchBSUce-pj-QTUKaTfyBOK_cUeDjcwZWmzHtt0yad93PxSGEeCyPLDR8U93oM5KypKd9cLbrFX6RG/pub?embedded=true" width="74%" height="344" frameborder="0" style="float:right;display:inline;margin-top:-25%;z-index:-2;"></iframe></div>
+<!-- <iframe src="https://docs.google.com/document/d/e/2PACX-1vRchBSUce-pj-QTUKaTfyBOK_cUeDjcwZWmzHtt0yad93PxSGEeCyPLDR8U93oM5KypKd9cLbrFX6RG/pub?embedded=true"></iframe> -->
 
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+      <!-- <iframe target="_blank" src="https://docs.google.com/document/d/e/2PACX-1vRchBSUce-pj-QTUKaTfyBOK_cUeDjcwZWmzHtt0yad93PxSGEeCyPLDR8U93oM5KypKd9cLbrFX6RG/pub?embedded=true" width="74%" height="344" frameborder="0" style="float:right;display:inline;margin-top:-25%;"></iframe></div> -->
+
 
       <iframe srcdoc="" frameborder="0" width="70%" height="420" frameborder="0" style="float:right;display:inline;margin-top:-35%;"></iframe>
 
@@ -49,11 +51,11 @@
                 var contents = $("iframe").contents();
 
            contents.find("html").html(html);
-
+           print(",,,")
            setTimeout(function() {
                contents.find('a[href^="http://"]').attr("target", "_blank");
                contents.find('a[href^="https://"]').attr("target", "_blank");
-           }, 1000); // Actually not sure if timeout is required here...
+           }, 50); // Actually not sure if timeout is required here...
        });
    });
 </script>
